# Spreche-Deutsch-API

./: .gitignore  Procfile  README.md  pyproject.toml
.run/: App.run.xml
alembic/: env.py
alembic/versions/: 0778c1a6ed64_create_sentences_table.py  142f70d7e65d_create_words_table.py  5c81fb8e6edc_create_categories_table.py  84b8bce2ada0_create_words_columns.py  9a4d15c38124_create_categories_columns.py  cd5a4ef10166_create_sentences_columns.py
app/: app.py  config.py  database.py  main.py
app/config/: config.py
app/database/: config.py  database.py
app/models/: CategoriesModel.py  SentencesModel.py  WordsModel.py
app/routes/: categories.py  sentences.py  words.py
app/schemas/: CategoriesSchema.py  SentencesSchema.py  WordsSchema.py  words.py
migrations/: env.py
migrations/versions/: 432d832645b5_create_categories.py  5116f7ec1969_create_sentences.py  c3e77c7f8487_create_words.py
