[tool.poetry]
name = "spreche-deutsch-api"
version = "1.0.4"
description = ""
authors = ["Will Borysiak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
psycopg = { extras = ["binary"], version = "^3.1.8" }
uvicorn = { extras = ["standard"], version = "^0.34.0" }
black = "24.10.0"
fastapi = "0.115.6"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
python-dotenv = "^1.0.0"
pydantic = "2.10.5"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.apitwenty"
